syntax = "proto2";

package rv.protos;

import "rastervision/protos/task.proto";
import "rastervision/protos/scene2.proto";
import "rastervision/protos/analyzer.proto";

message AnalyzeCommandConfig {
    required TaskConfig task = 1;
    repeated SceneConfig scenes = 2;
    repeated AnalyzerConfig analyzers = 3;
}
